log
Thu 25 Apr 2024 12:17:40 AM UTC: 
 tests:  0|6
total_score: 0/70
9059a1c
Thu 25 Apr 2024 02:00:24 AM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  1|5
total_score: 10/70
95b475a
Thu 25 Apr 2024 02:00:41 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
95580ad
Thu 25 Apr 2024 02:00:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1872238
Thu 25 Apr 2024 02:01:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dd8766c
Thu 25 Apr 2024 02:17:17 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
bd3e3c9
Thu 25 Apr 2024 02:20:12 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
309d773
Thu 25 Apr 2024 02:23:13 AM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
93c566f
Thu 25 Apr 2024 02:23:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
f3ea49c
Thu 25 Apr 2024 02:24:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
283c2ff
Thu 25 Apr 2024 02:30:16 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 20/70
b55811a
Thu 25 Apr 2024 02:31:46 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
442bae9
Thu 25 Apr 2024 02:33:37 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
175f940
Thu 25 Apr 2024 02:33:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1708585
Thu 25 Apr 2024 02:47:58 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|5
total_score: 10/70
dc4e59b
Thu 25 Apr 2024 02:48:30 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
63bb9e3
Thu 25 Apr 2024 02:57:58 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
cf4b6ad
Thu 25 Apr 2024 03:29:39 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
test.c: In function ‘searchMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4a5254a
Thu 25 Apr 2024 03:30:15 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
test.c: In function ‘searchMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dcbcc1f
Thu 25 Apr 2024 03:30:57 AM UTC: 
 hashmap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b365130
